k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
